<resources>
	<string name="app_name">VOICES</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_home">Home</string>
	<string name="menu_watch">Watch</string>
	<string name="menu_listen">Listen</string>
	<string name="tab_title_recent_articles">Recent</string>
	<string name="tab_title_world_voices">VOICES</string>
	<string name="tab_title_interviews">Interviews</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="watch_gallery_image">Watch gallery image</string>
	<string name="item_title">Item Title</string>
	<string name="articleExcerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in lacus aliquam lorem consectetur tristique. Quisque lobortis sapien a elit fringilla, in efficitur libero malesuada.</string>
	<string name="article_title">ARTICLE TITLE</string>
	<string name="recentArticleImage_description">Recent Article Image</string>
	<string name="title_of_video">Title of Video</string>
	<string name="video_excerpt_description">Video Excerpt Description</string>
	<string name="track_image_icon">Track Image Icon</string>
	<string name="track_title">Track Title</string>
	<string name="trackExcerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam in lacus aliquam lorem consectetur tristique. Quisque lobortis sapien a elit fringilla, in efficitur libero malesuada.</string>
	<string name="track_date">2020/02/06</string>
</resources>