<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/nav_home">

	<fragment
		android:id="@+id/nav_home"
		android:name="com.jsfarley.voices.ui.home.HomeFragment"
		android:label="@string/menu_home"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/nav_watch"
		android:name="com.jsfarley.voices.ui.watch.WatchFragment"
		android:label="@string/menu_watch"
		tools:layout="@layout/fragment_watch" />

	<fragment
		android:id="@+id/nav_listen"
		android:name="com.jsfarley.voices.ui.listen.ListenFragment"
		android:label="@string/menu_listen"
		tools:layout="@layout/fragment_listen" />
</navigation>