<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<androidx.cardview.widget.CardView
		android:id="@+id/trackCardView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="2dp"
		app:cardCornerRadius="4dp"
		app:cardElevation="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.0">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/trackItemLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="8dp">

			<ImageView
				android:id="@+id/trackThumbnail"
				android:layout_width="120dp"
				android:layout_height="120dp"
				android:scaleType="centerCrop"
				android:contentDescription="@string/track_image_icon"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/guideline2"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:srcCompat="@tools:sample/avatars" />

			<TextView
				android:id="@+id/trackTitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:contentDescription="@string/track_title"
				android:text="@string/track_title"
				android:textSize="30sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline2"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/trackExcerpt"
				android:layout_width="210dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:text="@string/trackExcerpt"
				android:textSize="12sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline2"
				app:layout_constraintTop_toBottomOf="@+id/trackTitle" />

			<TextView
				android:id="@+id/trackDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:contentDescription="@string/track_date"
				android:text="@string/track_date"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="@+id/guideline2"
				app:layout_constraintTop_toBottomOf="@+id/trackExcerpt" />

			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_begin="126dp" />
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>