<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<androidx.cardview.widget.CardView
		android:id="@+id/recent_item_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:cardCornerRadius="0dp"
		app:cardElevation="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/recent_item_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="10dp">

			<ImageView
				android:id="@+id/recentArticleImage"
				android:layout_width="142dp"
				android:layout_height="142dp"
				android:contentDescription="@string/recentArticleImage_description"
				android:scaleType="centerCrop"
				app:layout_constraintEnd_toStartOf="@+id/recentArticleTitle"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:srcCompat="@tools:sample/avatars" />

			<TextView
				android:id="@+id/recentArticleTitle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:text="@string/article_title"
				android:textSize="16sp"
				app:layout_constraintBottom_toTopOf="@+id/recentArticleExcerpt"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/recentArticleImage"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/recentArticleExcerpt"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:padding="5dp"
				android:text="@string/articleExcerpt"
				android:textSize="12sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/recentArticleImage"
				app:layout_constraintTop_toBottomOf="@+id/recentArticleTitle" />
		</androidx.constraintlayout.widget.ConstraintLayout>

	</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>